# footy-ev

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  BLUE_MAP.md  CLAUDE.md  HANDOFF.md  Makefile  PROJECT_INSTRUCTIONS.md  README.md  bootstrap.sh  features.md  make.ps1  pyproject.toml  run.py
.bootstrap_backup/: BLUE_MAP.md  CLAUDE.md  COSTS.md  SETUP_GUIDE.md
.claude/: settings.json
.claude/agents/: backtest-runner.md  data-scraper.md
.claude/skills/audit-clv/: SKILL.md
.claude/skills/extract-with-llm/: SKILL.md
.claude/skills/ingest-season/: SKILL.md
.claude/skills/run-backtest/: SKILL.md
dashboard/: app.py  charts.py  queries.py
docs/: SETUP_GUIDE.md
frontend/: .env.example  .gitignore  PROGRESS.md  QUICKSTART.md  README.md  docker-compose.yml  plan.md  prompt_01.md  prompt_11.md  prompt_12.md  prompt_13.md
frontend/api/: pyproject.toml
frontend/api/src/footy_ev_api/: __init__.py  auth.py  errors.py  main.py  settings.py
frontend/api/src/footy_ev_api/adapters/: aliases.py  audit.py  bets.py  bootstrap.py  circuit_breaker.py  clv.py  diagnostics.py  fixtures.py  kalshi.py  live_trading.py  pipeline.py  predictions.py  risk.py  settings.py  warehouse.py
frontend/api/src/footy_ev_api/jobs/: manager.py
frontend/api/src/footy_ev_api/middleware/: __init__.py  audit.py
frontend/api/src/footy_ev_api/queries/: __init__.py  fixture_xg_history.sql  odds_movement.sql  registry.py  snapshot_counts_by_venue.sql  team_form_last_n.sql  top_fixtures_by_bet_count.sql
frontend/api/src/footy_ev_api/routers/: aliases.py  audit.py  auth.py  bets.py  bootstrap.py  clv.py  diagnostics.py  fixtures.py  health.py  kalshi.py  live_trading.py  pipeline.py  predictions.py  risk.py  settings.py  shell.py  warehouse.py
frontend/api/src/footy_ev_api/schemas/: aliases.py  audit.py  auth.py  bets.py  bootstrap.py  diagnostics.py  fixtures.py  health.py  kalshi.py  live_trading.py  pipeline.py  predictions.py  risk.py  settings.py  shell.py  warehouse.py
frontend/api/src/footy_ev_api/ws/: jobs.py  pipeline.py
frontend/api/tests/: test_aliases.py  test_audit.py  test_auth.py  test_bets.py  test_bootstrap.py  test_clv.py  test_diagnostics.py  test_fixtures.py  test_health.py  test_kalshi.py  test_live_trading.py  test_openapi.py  test_pipeline.py  test_predictions.py  test_risk.py  test_settings.py  test_warehouse.py
frontend/scripts/: dev.ps1
frontend/web/: .npmrc  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  vitest.config.ts
notebooks/: 001_closing_odds_coverage.py
scripts/: bootstrap_betfair_aliases.py  bootstrap_kalshi_aliases.py  migration_002_audit_report.py  probe_kalshi_demo.py  report_backfill.py  seed_team_aliases.sql  seed_teams.sql  truncate_epl_for_reload.py
src/footy_ev/: __init__.py
tests/: test_run_smoke.py
tests/fixtures/: kalshi_events_sample.json
tests/integration/: test_betfair_live.py  test_evaluate_run.py  test_football_data_ingest_real.py  test_kalshi_live.py  test_migration_002_warehouse.py  test_orchestration_e2e.py  test_paper_trade_emits_bet_with_resolution.py  test_paper_trade_kalshi.py  test_understat_real.py  test_walkforward_epl.py  test_xgb_walkforward.py
tests/unit/: test_betfair_client.py  test_bootstrap.py  test_bootstrap_fixture_creation.py  test_bootstrap_ticker_parser.py  test_bootstrap_title_parser.py  test_calibrate.py  test_clv.py  test_dashboard_queries.py  test_db_migrations.py  test_devig.py  test_diagnostics.py  test_dixon_coles.py  test_feature_audit.py  test_features_assembler.py  test_football_data_frozen_header.py  test_football_data_loader.py  test_football_data_parse.py  test_football_data_source.py  test_ingestion_cli.py  test_kalshi_client.py  test_kalshi_resolution.py  test_kalshi_signing.py  test_kelly.py  test_llm_router.py  test_migration_002.py  test_migration_012.py  test_model_loader.py  test_node_analyst.py  test_node_execution.py  test_node_news.py  test_node_pricing.py  test_node_risk.py  test_node_scraper.py  test_orchestration_state.py  test_paper_trader_once.py  test_portfolio.py  test_reliability.py  test_resolution.py  test_ruin.py  test_run_orchestrator.py  (+8 more)
(+173 files in other folders)
