[project]
name = "footy-ev"
version = "0.0.1"
description = "+EV sports betting pipeline for European football (free-tier edition)"
requires-python = ">=3.12"
dependencies = [
    # Data layer
    "duckdb>=1.1.0",
    "polars>=1.0.0",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Modeling
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.1.0",
    "shap>=0.46.0",
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Scraping
    "playwright>=1.48.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=9.0.0",
    # Betting math (don't reinvent)
    "goto-conversion>=1.4.0",
    # LLM clients (local + free fallback)
    "ollama>=0.3.0",
    "google-generativeai>=0.8.0",
    # CLI / utils
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "keyring>=25.0.0",
    # Dashboard
    "streamlit>=1.36.0",
    "altair>=5.3.0",
    "langgraph-checkpoint-sqlite>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.111.0",
    "respx>=0.21",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "TCH"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # typer idiom: `typer.Option(...)` in argument defaults is canonical
    "N806",   # ML convention: uppercase X / X_pd / X_p design matrices are standard
    "N818",   # domain exceptions (InsufficientTrainingData) named for clarity, not -Error suffix
    "TCH001", # moving runtime-used app imports into TYPE_CHECKING is brittle for typer/duckdb
    "TCH002", # same for third-party
    "TCH003", # same for stdlib
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["notebooks/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["duckdb.*", "shap.*", "goto_conversion.*", "playwright.*", "ollama.*", "google.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration (require sample db)",
]
